[package]
name = "spaceship_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_renet = {version = "0.0.12", features = ["serde", "transport"]}
bincode = "1.3.3"
rand = "0.8.5"
serde = "1.0.203"


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3